kube-opencensus-tracing/welcomer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcomer
  # annotations:
  #   config.linkerd.io/trace-collector: "oc-collector.tracing:55678"
  namespace: hackerspace
  labels:
    app: welcomer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcomer
  template:
    metadata:
      labels:
        app: welcomer
    spec:
      containers:
      - name: welcomer
        image: welcomer:v2.1
        ports:
        - containerPort: 8080
          name: http
