kube-opencensus-tracing/welcomer/nginx-ldap.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ldap-auth
  namespace: hackerspace
spec:
  type: ClusterIP
  ports:
  - name: nginx-ldap-auth
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: nginx-ldap-auth
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-ldap-auth
  namespace: hackerspace
  labels:
    app: nginx-ldap-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ldap-auth
  template:
    metadata:
      labels:
        app: nginx-ldap-auth
    spec:
      serviceAccountName: nginx-ldap-auth
      containers:
      - image: docker.io/tpimenta/nginx-ldap-auth:v1.0.6
        name: nginx-ldap-auth
        command:
        - "/usr/local/bin/nginx-ldap-auth"
        - "--config"
        - "/etc/nginx-ldap-auth/config.yaml"
        ports:
        - name: http
          containerPort: 5555
        volumeMounts:
        - name: config
          mountPath: /etc/nginx-ldap-auth
        resources:
          limits:
            cpu: 50m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 5Mi
      volumes:
      - name: config
        secret:
          secretName: nginx-ldap-auth
          items:
          - key: config.yaml
            path: config.yaml
