kube-opencensus-tracing/welcomer/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-nginx
  namespace: hackerspace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:80;
spec:
  rules:
  - host: welcomer.loreans.com
    http:
      paths:
      - backend:
          serviceName: welcomer
          servicePort: 8080
  - host: guesttracker.loreans.com
    http:
      paths:
      - backend:
          serviceName: guesttracker
          servicePort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  #   linkerd.io/inject: enabled  
  #   config.linkerd.io/trace-collector: "oc-collector.tracing:55678"
  labels:
    app: nginx-ingress
  name: nginx-ingress
  namespace: hackerspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec: 
      containers:
      - args:
        - /nginx-ingress-controller
        - --default-backend-service=
        - --ingress-class=nginx
        - --configmap=hackerspace/nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.22.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx-ingress-controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          procMount: Default
          runAsUser: 33
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: hackerspace
  labels:
    app: nginx-ingress
spec:
  type: LoadBalancer 
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: nginx-ingress
